# PoissonBinomialDistributionCalculator

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  PoissonBinomialDistribution.vcxproj.filters  README.md  premake5.lua
include/: PoissonBinomialDistribution.hpp
probcalc/: CMakeLists.txt
probcalc/include/: PoissonBinomialDistribution.hpp
probcalc/src/: PoissonBinomialDistribution.cpp  main.cpp
src/: BinomialDistribution.cpp  BinomialDistribution.hpp  PoissonBinomialDistribution.cpp  PoissonBinomialDistribution.hpp  RandomNumberGenerator.hpp  main.cpp
